fix intro screen on mobile smaller screens and speed up quiz start

--- a/src/style/scss/_typography.scss
+++ b/src/style/scss/_typography.scss
@@ -50,6 +50,10 @@ body {
         top: 50%;
         transform: translate(-50%, -50%);
       }
+      @media (max-width: 414px) {
+        height: 200px;
+        width: 200px;
+      }
   }
 
  
